# DanMuShooter

./: CMakeLists.txt  GameWidget.cpp  GameWidget.h  GameWidget.ui  README.md  main.cpp
src/: AStarNode.cpp  AStarNode.h  Color3.hpp  Color4.hpp  CxhUtils.cpp  CxhUtils.h  DanMuData.h  GameStack.hpp  GameStatue.h  Point2.hpp  Size2.hpp  ThreadSafeQueue.hpp  Vector2.hpp
src/ai/: PlayerStateMachine.cpp  PlayerStateMachine.h
src/ecs/: IntermediateProcess.cpp  IntermediateProcess.h
src/ecs/components/: ComponentAngle.cpp  ComponentAngle.h  ComponentAnimation.hpp  ComponentBase.hpp  ComponentBullet.cpp  ComponentBullet.h  ComponentCamera.hpp  ComponentFirearmsWeapon.cpp  ComponentFirearmsWeapon.h  ComponentHealth.cpp  ComponentHealth.h  ComponentMoveStack.cpp  ComponentMoveStack.h
src/ecs/systems/: System.cpp  System.h  SystemAngle.cpp  SystemAngle.h  SystemAnimation.cpp  SystemAnimation.h  SystemBullet.cpp  SystemBullet.h  SystemCamera.cpp  SystemCamera.h  SystemFindRound.cpp  SystemFindRound.h  SystemFirearmsWeapon.cpp  SystemFirearmsWeapon.h  SystemGameDanMu.cpp  SystemGameDanMu.h  SystemGamePrepare.cpp  SystemGamePrepare.h  SystemMove.cpp  SystemMove.h  SystemPlayer.cpp  SystemPlayer.h
src/managers/: BulletManager.cpp  BulletManager.h  DanMuManager.cpp  DanMuManager.h  GameManager.cpp  GameManager.h  GameSettings.cpp  GameSettings.h  PlayerManager.cpp  PlayerManager.h  SystemManager.cpp  SystemManager.h
src/modules/BSdk/: BSdk.cpp  BilibiliGetCodeDialog.cpp  BilibiliGetCodeDialog.h  BilibiliGetCodeDialog.ui  DanmaKuWebSocket.cpp  DanmaKuWebSocket.h
src/modules/MusicPlayModule/: CommonUtils.cpp  CommonUtils.h  MusicPlayModule.cpp  MusicPlayModule.h  MusicPlayModule.ui
src/modules/SummaryWidgetModule/: InvestWidget.cpp  InvestWidget.h  ScoreData.hpp  ScoreWidget.cpp  ScoreWidget.h  SummaryWidgetModule.cpp  SummaryWidgetModule.h  SummaryWidgetModule.ui  image.qrc
src/res/: Animation.h  GameMap.cpp  GameMap.h  GameSource.cpp  GameSource.h  SourceUtils.cpp  SourceUtils.h
src/scenes/: GameGui.cpp  GameGui.h  GameScene.cpp  GameScene.h
